# polytoken.ai

./: .env.example  .gitignore  .snapshot-selftest.tmp  CLAUDE.md  COMMANDS.MD  README.md  package-lock.json  package.json
apps/email-listener/: PIPELINE-SWALLOW-INVENTORY.md  pyproject.toml  requirements.txt
apps/email-listener/app/: container.py  main.py  settings.py
apps/email-listener/app/application/capabilities/: registry.py
apps/email-listener/app/application/use_cases/: _token_provenance.py  autofill.py  cache_key.py  confirm_action_dispatch.py  curate_entity_merge.py  edit_region.py  evaluate_anticipatory_candidates.py  generate_code_island.py  generate_ui_spec.py  ingest_inbound_email.py  pipeline_health.py  promote_edge.py  promote_source_ledger_entry.py  propose_regions.py  reprocess_email.py  run_chat_turn.py  run_chat_turn_confirm_action.py  run_chat_turn_tool_loop.py  run_chat_turn_widgets.py  set_component_relationship.py  submit_widget_interaction.py  suggest_entity_types.py  synthesize_knowledge.py
apps/email-listener/app/composition/: anticipatory_providers.py  cost_providers.py  genui_providers.py  llm_adapter_providers.py
apps/email-listener/app/domain/anticipatory/: candidate.py  fixtures.py  stubs.py  triggers.py
apps/email-listener/app/domain/entities/: autofill_retrieval_event.py
apps/email-listener/app/domain/ports/: anticipatory_ports.py  autofill_retrieval_event_repository.py  chat_repositories.py  chat_widget_interaction_repository.py  component_repository.py  cost_ledger_repository.py  email_repository.py  (+8 more)
apps/email-listener/scripts/extraction_eval/: __init__.py  build_dataset.py  dataset.py  update_baseline.py
apps/email-listener/scripts/genui_eval/: compare_reports.py  report.py  rubric.py  run_eval.py  style_metrics.py
apps/email-listener/scripts/research_eval/: __init__.py  example_runs.json  questions.json  rubric.py  run_eval.py
apps/email-listener/tests/: test_autofill_entity_context.py  test_autofill_instrumentation.py  test_chat_model_registry.py  test_chat_provider_router.py  test_container.py  test_cost_circuit_breaker.py  test_cost_ledger_repository.py  test_email_body_helpers.py  test_embedding_adapter.py  test_entity_curation.py  test_entity_type_classifier_adapter.py  test_genui_eval_rubric.py  test_genui_eval_style.py  test_genui_exemplars.py  test_genui_history_endpoints.py  test_genui_retrieval_provider.py  test_importer_repository.py  test_ingest_use_case.py  test_knowledge_graph_repository.py  test_mime_parser.py  test_parser_protocol.py  test_pdf_parser.py  test_pipeline_health.py  test_pipeline_health_api.py  test_promote_edge.py  test_promote_edge_endpoint.py  test_promote_source_endpoint.py  test_propose_regions.py  test_reingest_idempotency.py  test_reprocess_email.py  test_requirements_sync.py  test_segmentation_adapter.py  test_set_component_relationship.py  test_suggest_entity_types.py  test_supabase_generation_audit_repository.py  test_supabase_repositories.py  test_supabase_ui_spec_template_history.py  test_supabase_ui_spec_template_repository.py  test_synthesize_knowledge.py
apps/email-listener/tests/adversarial/: test_chat_sse_user_scoping.py  test_chat_widget_submit_known_gap.py  test_cross_tenant.py
apps/email-listener/tests/application/: test_cache_key.py  test_emit_ui_spec_tool.py  test_generate_code_island.py  test_generate_ui_spec.py  test_ingest_forwarding_resolution.py  test_promote_edge_user_scoping.py  test_promote_source_ledger_reuse.py  test_run_chat_turn.py  test_run_chat_turn_envelope_gate.py  test_run_chat_turn_linked_context.py  test_run_chat_turn_real_tools_wiring.py  test_run_chat_turn_source_ledger.py  test_run_chat_turn_thread_context.py  test_run_chat_turn_tool_loop.py  test_run_chat_turn_tool_loop_bugfixes.py  test_run_chat_turn_tool_loop_e2e.py  test_source_capture_confirm_action.py  test_source_capture_dispatch.py
apps/email-listener/tests/corpus/: __init__.py  forwarding_harness.py
apps/email-listener/tests/evals/: README.md  test_extraction_dataset_builder.py  test_extraction_replay.py  test_injection_adversarial_suite.py  test_injection_fixtures.py  test_live_injection_harness.py  test_research_eval_rubric.py  test_retrieval_golden_set.py  test_scorers.py  test_web_search_injection_suite.py
apps/email-listener/tests/infrastructure/: test_bedrock_chat_adapter.py  test_genui_artifacts.py  test_genui_code_generator_adapter.py  test_genui_code_judge_adapter.py  test_genui_generator_adapter.py  test_genui_quarantine_adapter.py  test_openrouter_chat_adapter.py  test_supabase_chat_run_repository.py
apps/email-listener/tests/presentation/: test_backfill_reprocess_endpoint.py  test_chat_stream.py  test_genui_code_endpoint.py  test_genui_endpoint.py  test_user_context.py
apps/email-listener/tests/support/: test_echo_tool_executor.py
(+1065 files in other folders)
